--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,6 +31,28 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autocomplete: "name"%>
+    </div>
+    <div class="form-group">
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone, autocomplete: "phone"%>
+    </div>
+
+    <div class="container">
+      <%= f.fields_for :images do |image_form| %>
+      <div class="form-group">
+      <%= image_form.label :url, "Agrega tu imagen de perfil" %>
+      <%= image_form.text_field :url %>
+      </div>
+      <div class="form-group">
+      <%= image_form.label :context, "Describe donde estabas" %>
+      <%= image_form.text_field :context %>
+      </div>
+      <% end %>
+      </div>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
