--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,28 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autocomplete: "name" %>
+    </div>
+    <div class="form-group">
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone, autocomplete: "phone" %>
+    </div>
+
+    <div class="container">
+      <%= f.fields_for :images do |image_form| %>
+      <div class="form-group">
+      <%= image_form.label :url, "Agrega tu imagen de perfil" %>
+      <%= image_form.text_field :url %>
+      </div>
+      <div class="form-group">
+      <%= image_form.label :context, "Describe donde estabas" %>
+      <%= image_form.text_field :context %>
+      </div>
+      <% end %>
+      </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
