--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
     <div class="container my-5">
       <%= yield %>
     </div>
+    <%= link_to "Entrar", new_user_session_path%> 
+    <%= link_to "Registrar", new_user_registration_path%> 
+    <%= link_to "Editar", edit_user_registration_path%> 
+    <%= link_to "Salir", destroy_user_session_path%> 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
