--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -1,4 +1,6 @@
 <div id="<%= dom_id pet %>">
+  <h2>Owner</h2>
+  <%= image_tag pet.user.images[0].url, class: "col-2" %> <!--Para poner la foto de perfil primera-->
   <p>
     <strong>Name:</strong>
     <%= pet.name %>
@@ -18,5 +20,9 @@
     <strong>Gender:</strong>
     <%= pet.gender %>
   </p>
+
+  <%pet.images.each do |image| %>
+    <%= image_tag image, class: "col-3" %>
+  <%end%>
 
 </div>
