--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,35 @@
 
   <body>
 
+    <ul class="nav d-flex justify-content-center align-items-center bg-info py-3 fs-5">
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Mascotas", pets_path, class: "nav-link text-white fw-bold"%> 
+        </li>
+        <li class="nav-item">
+          <%= link_to "Editar mis datos", edit_user_registration_path, class: "nav-link text-white fw-bold"%> 
+        </li>
+        <li class="nav-item">
+          <%= link_to "Salir", destroy_user_session_path, class: "nav-link text-white fw-bold"%> 
+        </li>
+      <%else%>
+        <li class="nav-item">
+          <%= link_to "Iniciar sesión", new_user_session_path, class: "nav-link text-white fw-bold"%> 
+        </li>
+        <li class="nav-item">
+          <%= link_to "Registrarse", new_user_registration_path, class: "nav-link text-white fw-bold"%> 
+        </li>
+
+      <%end%>
+    </ul>
+
     <div class="container my-5">
       <%= yield %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     </div>
-    <%= link_to "Entrar", new_user_session_path%> 
-    <%= link_to "Registrar", new_user_registration_path%> 
-    <%= link_to "Editar", edit_user_registration_path%> 
-    <%= link_to "Salir", destroy_user_session_path%> 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
